--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "md5": "^2.2.1",
     "mongoose": "^5.9.3",
-    "mongoose-encryption": "^2.0.2"
+    "mongoose-encryption": "^2.0.2",
+    "nodemon": "^2.0.2"
   }
 }
